[package]
name = "grim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["debug"]
debug = ["print_code", "trace_execution"]
print_code = []
trace_execution = []
[dependencies]
aopt = "0.6.7"
grim-derive = {path = "../grim-derive"}
lazy_static = "1.4.0"
spin = "0.9.4"

